--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "babel-preset-es2015-rollup": "^3.0.0",
     "cssnano": "^3.9.1",
+    "cz-conventional-changelog": "^2.0.0",
     "livereload": "^0.6.0",
     "npm-run-all": "^3.1.2",
     "postcss-cssnext": "^2.9.0",
@@ -40,5 +41,10 @@
   },
   "dependencies": {
     "debug": "^2.6.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
