--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,5 @@
 {
-  "presets": [
-    [
-      "es2015",
-      {
-        "modules": false
-      }
+    "presets": [
+        "es2015-rollup"
     ]
-  ],
-  "plugins": [
-    "external-helpers"
-  ]
 }
