--- a/package.json
+++ b/package.json
@@ -22,26 +22,13 @@
   "homepage": "https://github.com/jlengstorf/learn-rollup#readme",
   "devDependencies": {
     "babel-preset-es2015-rollup": "^3.0.0",
-    "cssnano": "^3.9.1",
     "cz-conventional-changelog": "^2.0.0",
-    "livereload": "^0.6.0",
-    "npm-run-all": "^3.1.2",
-    "postcss-cssnext": "^2.9.0",
-    "postcss-nested": "^1.0.0",
-    "postcss-simple-vars": "^3.0.0",
-    "rollup": "^0.39.0",
+    "eslint": "^3.19.0",
+    "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^7.0.0",
-    "rollup-plugin-eslint": "^3.0.0",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-postcss": "^0.2.0",
-    "rollup-plugin-replace": "^1.1.1",
-    "rollup-plugin-uglify": "^1.0.1",
-    "rollup-watch": "^3.0.0"
+    "rollup-plugin-eslint": "^3.0.0"
   },
-  "dependencies": {
-    "debug": "^2.6.0"
-  },
+  "dependencies": {},
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
