--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "eslint": "^3.19.0",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-eslint": "^3.0.0"
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-eslint": "^3.0.0",
+    "rollup-plugin-node-resolve": "^3.0.0"
   },
   "dependencies": {
     "debug": "^2.6.4"
