--- a/package.json
+++ b/package.json
@@ -22,14 +22,21 @@
   "homepage": "https://github.com/jlengstorf/learn-rollup#readme",
   "devDependencies": {
     "babel-preset-es2015-rollup": "^3.0.0",
+    "colors": "^1.1.2",
+    "cssnano": "^3.10.0",
     "cz-conventional-changelog": "^2.0.0",
     "eslint": "^3.19.0",
+    "postcss-cssnext": "^2.10.0",
+    "postcss-nested": "^1.0.1",
+    "postcss-simple-vars": "^3.1.0",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-eslint": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^1.1.1"
+    "rollup-plugin-postcss": "^0.4.1",
+    "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-uglify": "^1.0.2"
   },
   "dependencies": {
     "debug": "^2.6.4"
