--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-postcss": "^0.4.1",
     "rollup-plugin-replace": "^1.1.1",
-    "rollup-plugin-uglify": "^1.0.2"
+    "rollup-plugin-uglify": "^1.0.2",
+    "rollup-watch": "^3.2.2"
   },
   "dependencies": {
     "debug": "^2.6.4"
