--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c --watch",
+    "prod": "NODE_ENV=production rollup -c",
     "reload": "livereload 'build/'",
     "watch": "npm-run-all --parallel reload dev",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,6 +27,7 @@
     "cssnano": "^3.10.0",
     "cz-conventional-changelog": "^2.0.0",
     "eslint": "^3.19.0",
+    "livereload": "^0.6.2",
     "postcss-cssnext": "^2.10.0",
     "postcss-nested": "^1.0.1",
     "postcss-simple-vars": "^3.1.0",
